<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_myOrderFragment"
            app:destination="@id/myOrderFragment" />
        <!-- Добавьте действие между navigation_home и navigation_myorder -->
        <action
            android:id="@+id/action_navigation_home_to_navigation_myorder"
            app:destination="@id/navigation_myorder" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_myorder"
            app:destination="@id/navigation_myorder" />
        <action
            android:id="@+id/action_navigation_dashboard_to_myOrderFragment"
            app:destination="@id/myOrderFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_mainActivity"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_navigation_notifications_to_userProfileFragment2"
            app:destination="@id/userProfileFragment2" />
        <action
            android:id="@+id/action_navigation_notifications_to_myOrderFragment"
            app:destination="@id/myOrderFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment2"
        android:name="com.example.myapplication.fragments.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.myapplication.activities.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/myOrderFragment"
        android:name="com.example.myapplication.fragments.MyOrderFragment"
        android:label="fragment_my_order"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/userProfileFragment2"
        android:name="com.example.myapplication.fragments.UserProfileFragment"
        android:label="fragment_user_profile"
        tools:layout="@layout/fragment_user_profile" >
        <action
            android:id="@+id/action_userProfileFragment2_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>